Add Abot PostSync job with Python Script

--- a/apps/abot-app/kustomization.yaml
+++ b/apps/abot-app/kustomization.yaml
@@ -2,3 +2,6 @@ resources:
   - namespace.yaml
   - deployment.yaml
   - service.yaml
+  - abot-hook/abot-configmap.yaml
+  - abot-hook/abot-secret.yaml
+  - abot-hook/abot-job.yaml
