--- a/apps/abot-app/abot-hook/abot-job.yaml
+++ b/apps/abot-app/abot-hook/abot-job.yaml
@@ -11,7 +11,11 @@ spec:
       containers:
       - name: abot-trigger
         image: python:3.11-slim
-        command: ["python", "/scripts/abot-trigger.py"]
+        command: 
+          - sh
+          - -c
+          - |
+            pip install requests && python /scripts/abot-trigger.py
         envFrom:
         - secretRef:
             name: abot-secret
@@ -23,4 +27,4 @@ spec:
       - name: script-volume
         configMap:
           name: abot-trigger-script
-  backoffLimit: 0
+  backoffLimit: 1
