--- a/deploy/operator/rbac.yaml
+++ b/deploy/operator/rbac.yaml
@@ -15,19 +15,11 @@ rules:
     verbs: ["get","list","watch","patch","update"]
   # Read Secrets to obtain Abot credentials
   - apiGroups: [""]
-    resources: ["secrets"]
-    verbs: ["get","list","watch"]
+    resources: ["secrets", "configmaps", "events"]
+    verbs: ["get","list","watch","patch","update"]
   - apiGroups: ["apiextensions.k8s.io"]
     resources: ["customresourcedefinitions"]
     verbs: ["get","list","watch"]
-  # Create/Update ConfigMaps (optional summary export)
-  - apiGroups: [""]
-    resources: ["configmaps"]
-    verbs: ["get","list","watch","create","update","patch"]
-  # Emit Events (nice to have)
-  - apiGroups: [""]
-    resources: ["events"]
-    verbs: ["create","patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
