--- a/deploy/cr/abot-testsuite-5g-cr.yaml
+++ b/deploy/cr/abot-testsuite-5g-cr.yaml
@@ -4,7 +4,7 @@ metadata:
  name: abot-testsuite-5g
  namespace: default
 spec:
-  endpoint: "https://182.74.103.228/abot"
+  endpoint: "http://182.74.103.228:80/abotrest/abot/api/v5/login"
   auth:
     secretRef: abot-credentials
   tests:
